--- a/pdfgen-front/index.html
+++ b/pdfgen-front/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume Builder</title>
+    <title>HasteCV</title>
+    <link rel="icon" type="image/x-icon" href="hasteico.ico">
   </head>
   <body>
     <div id="app"></div>
