Added Mouseflow and routing update

--- a/pdfgen-front/index.html
+++ b/pdfgen-front/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HasteCV</title>
-    <link rel="icon" type="image/x-icon" href="hasteico.ico">
+    <link rel="icon" type="image/x-icon" href="hasteico.ico" />
+    <script type="text/javascript">
+      window._mfq = window._mfq || [];
+      (function () {
+        var mf = document.createElement("script");
+        mf.type = "text/javascript";
+        mf.defer = true;
+        mf.src =
+          "//cdn.mouseflow.com/projects/a260de8d-6ecc-4d49-823b-117722226b7f.js";
+        document.getElementsByTagName("head")[0].appendChild(mf);
+      })();
+    </script>
   </head>
   <body>
     <div id="app"></div>
